k8s/bookworm-3-keycloak.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: bookworm-keycloak
    io.kompose.network/bookworm_network: "true"
  name: bookworm-keycloak
  namespace: bookworm
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bookworm-keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/bookworm_network: "true"
        io.kompose.service: bookworm-keycloak
    spec:
      containers:
        - args:
            - -Dkeycloak.profile.feature.upload_scripts=enabled
          image: jboss/keycloak:15.1.0
          name: bookworm-keycloak
          ports:
            - containerPort: 8080
          resources: { }
          volumeMounts:
            - mountPath: /tmp
              name: bookworm-config-claim0
      restartPolicy: Always
      volumes:
        - name: bookworm-config-claim0
          persistentVolumeClaim:
            claimName: bookworm-config-claim0
status: { }

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: bookworm-keycloak
  name: bookworm-keycloak
  namespace: bookworm
spec:
  clusterIP: None
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: bookworm-keycloak
status:
  loadBalancer: { }
