k8s/bookworm-1-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookworm
  uid: 98de6a98-1623-42ee-95be-30b9577f0801
  resourceVersion: '8925'
  creationTimestamp: '2022-02-12T15:04:10Z'
  labels:
    kubernetes.io/metadata.name: bookworm
  managedFields:
    - manager: node-fetch
      operation: Update
      apiVersion: v1
      time: '2022-02-12T15:04:10Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: { }
            f:kubernetes.io/metadata.name: { }
  selfLink: /api/v1/namespaces/bookworm
status:
  phase: Active
spec:
  finalizers:
    - kubernetes

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: bookworm-network
  namespace: bookworm
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/bookworm-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/bookworm-network: "true"
